--- a/commons/build.gradle
+++ b/commons/build.gradle
@@ -1,5 +1,5 @@
 
-
 dependencies {
 	implementation group: 'jakarta.persistence', name: 'jakarta.persistence-api', version: '2.2.3'
+	implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.9.7'
 }
