--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ build/
 !**/src/main/**/build/
 !**/src/test/**/build/
 
+### DB ###
 **/*.mv.db
 
 **/*.swp
@@ -29,6 +30,7 @@ bin/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
+.run
 
 ### NetBeans ###
 /nbproject/private/
