--- a/build.gradle
+++ b/build.gradle
@@ -1,28 +1,22 @@
-plugins {
-    id 'org.kordamp.gradle.jacoco' version '0.49.0'
-}
-
-allprojects {
+// This will be applied to all subprojects, so :client, :server and :commons
+subprojects {
 	repositories {
 		mavenCentral()
 	}
-}
 
-subprojects {
+	// We don't seem to be able to use the plugins {...} syntax within subprojects {...}
 	apply plugin: 'java'
 	apply plugin: 'checkstyle'
 	apply plugin: 'jacoco'
 	
-	
 	group = 'oopp'
 	version = '0.0.1-SNAPSHOT'
-	sourceCompatibility = '11'
-	checkstyle {
-		toolVersion "9.2.1"
 
+	checkstyle {
+		toolVersion "10.9.2"
 		ignoreFailures = false
 		maxErrors = 0
-		maxWarnings = 0
+		//showViolations = true
 		configFile = '../checkstyle.xml' as File
 	}
 
@@ -30,19 +24,28 @@ subprojects {
 		useJUnitPlatform()
 		finalizedBy jacocoTestReport 
 	}
+	
 	jacocoTestReport {
 		reports {
 			xml.required = false
 			csv.required = false
 			html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
-			}
+		}
 	}
 	
 	dependencies {
+		implementation 'javax.persistence:javax.persistence-api:2.2'
+
+		// This is used for some extensions to the core Java classes, mostly in the example code
 		implementation 'org.apache.commons:commons-lang3:3.12.0'
 		
-		testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
-		testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
-		testImplementation 'org.mockito:mockito-core:4.1.0'
+		testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.2'
+		testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.9.2'
+		testImplementation 'org.mockito:mockito-core:5.2.0'
+	}
+
+	// Additional deprecation information
+	tasks.withType(JavaCompile) {
+		options.compilerArgs += ['-Xlint:deprecation']
 	}
 }
