--- a/client/build.gradle
+++ b/client/build.gradle
@@ -1,32 +1,29 @@
 plugins {
-    id 'application'
-    id("org.openjfx.javafxplugin") version "0.0.11"
+	id 'application'
+	id "org.openjfx.javafxplugin" version "0.0.13"
 }
 
 application {
-    mainClass = 'client.Main'
+	mainClass = 'client.Main'
 }
 
 javafx {
-    version = "17.0.2"
-    modules = [ 'javafx.controls', 'javafx.fxml' ]
+	version = "19.0.2.1"
+	modules = [ 'javafx.controls', 'javafx.fxml' ]
 }
-
 
 dependencies {
 	implementation project(":commons")
 	
-	implementation group: 'org.glassfish.jersey.core', name: 'jersey-client', version: '3.0.3'
-	implementation group: 'org.glassfish.jersey.inject', name: 'jersey-hk2', version: '3.0.3'
-	implementation group: 'org.glassfish.jersey.media', name: 'jersey-media-json-jackson', version: '3.0.3'
-	
-	implementation group: 'jakarta.activation', name: 'jakarta.activation-api', version: '2.0.1'
-	
-	implementation 'com.google.inject:guice:5.0.1'
+	implementation 'org.openjfx:javafx-controls:19.0.2.1'
+	implementation 'org.openjfx:javafx-fxml:19.0.2.1'
 
-	implementation 'org.springframework.boot:spring-boot-starter-websocket:2.6.3'
-	
-	implementation 'org.openjfx:javafx-controls:17.0.2'
-	implementation 'org.openjfx:javafx-fxml:17.0.2'
-	
+	implementation 'com.google.inject:guice:5.1.0'
+
+	// This dependency corresponds to the Spring Starter Dependencies in the Sever
+	implementation 'org.glassfish.jersey.core:jersey-client:3.1.1'
+
+	// Unused dependencies, don't need them for now, might need them later
+	//implementation 'org.glassfish.jersey.inject:jersey-hk2:3.1.1'
+	//implementation 'org.glassfish.jersey.media:jersey-media-json-jackson:3.1.1'
 }
