--- a/server/build.gradle
+++ b/server/build.gradle
@@ -1,13 +1,21 @@
 plugins {
-	id 'org.springframework.boot' version '2.6.3'
-	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+	id 'org.springframework.boot' version '3.0.4'
+	// This way we don't have to provide the version for all of the spring dependencies in here
+	id 'io.spring.dependency-management' version '1.1.0'
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-websocket'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	runtimeOnly 'com.h2database:h2'
 	implementation project(":commons")
+
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-jersey'
+	implementation 'org.springframework.boot:spring-boot-starter-websocket'
+	
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	
+	runtimeOnly 'com.h2database:h2'
+
+	// Pretty sure we don't need this, which is why I removed it, but I'll leave it as a comment
+	// here for now, in case it is needed later
+	//implementation 'org.springframework.boot:spring-boot-starter-web'
 }
