--- a/client/build.gradle
+++ b/client/build.gradle
@@ -23,10 +23,9 @@ dependencies {
 	// Since we aren't using the spring dependency manager, we need to specify the dependency manually
 	implementation 'org.springframework.boot:spring-boot-starter-websocket:2.7.9'
 
-	// This dependency corresponds to the Spring Starter Dependencies in the Sever
+	// These dependencies correspond to the Spring Starter Dependencies in the Sever
 	implementation 'org.glassfish.jersey.core:jersey-client:3.1.1'
-
-	// Unused dependencies, don't need them for now, might need them later
-	//implementation 'org.glassfish.jersey.inject:jersey-hk2:3.1.1'
-	//implementation 'org.glassfish.jersey.media:jersey-media-json-jackson:3.1.1'
+	implementation 'org.glassfish.jersey.inject:jersey-hk2:3.1.1'
+	implementation 'org.glassfish.jersey.media:jersey-media-json-jackson:3.1.1'
+	implementation 'jakarta.activation:jakarta.activation-api:2.0.1'
 }
