--- a/server/build.gradle
+++ b/server/build.gradle
@@ -17,7 +17,8 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
 	
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	
+	testImplementation 'junit:junit:4.13.1'
+
 	runtimeOnly 'com.h2database:h2'
 
 	// Unused dependencies, don't need them for now, might need them later
