--- a/client/build.gradle
+++ b/client/build.gradle
@@ -28,4 +28,5 @@ dependencies {
 	implementation 'org.glassfish.jersey.inject:jersey-hk2:3.0.3'
 	implementation 'org.glassfish.jersey.media:jersey-media-json-jackson:3.0.3'
 	implementation 'jakarta.activation:jakarta.activation-api:2.0.1'
+    testImplementation 'junit:junit:4.13.1'
 }
