--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -16,3 +16,5 @@ spring.h2.console.enabled=true
 spring.jpa.hibernate.ddl-auto=update
 # show auto-generated SQL commands
 #spring.jpa.hibernate.show_sql=true
+
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS = false
