Fixed the Board Customization Settings. Restyled the Board Customization Popup. Ref #130

--- a/build.gradle
+++ b/build.gradle
@@ -68,6 +68,7 @@ subprojects {
 	// Additional deprecation information
 	tasks.withType(JavaCompile) {
 		options.compilerArgs += ['-Xlint:deprecation']
+		options.compilerArgs += ['-Xlint:unchecked']
 	}
 }
 
